# claude-ha

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml  requirements_test.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  dependabot-auto-merge.yml  hacs.yml  hassfest.yml  lint.yml  secret-scan.yml  tests.yml
custom_components/claude_ha/: __init__.py  addon.py  api.py  automation_commit.py  binary_sensor.py  button.py  config_flow.py  confirm.py  const.py  conversation.py  coordinator.py  diagnostics.py  entity.py  frontend.py  health.py  icons.json  manifest.json  quality_scale.yaml  repairs.py  risk.py  sensor.py  services.py  services.yaml  strings.json  vision.py  voice.py
custom_components/claude_ha/translations/: en.json
custom_components/claude_ha/www/: claude-chat-card.js
scripts/: secret_scan.py  verify_ci_green.sh
tests/: __init__.py  conftest.py  test_actions.py  test_addon.py  test_api.py  test_automation_commit.py  test_automation_policy_guard.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_confirm.py  test_conversation.py  test_diagnostics.py  test_frontend.py  test_health.py  test_init.py  test_options.py  test_repairs.py  test_risk.py  test_secret_scan.py  test_sensor.py  test_services.py  test_streaming.py  test_vision.py  test_voice.py
